--- a/spot-instance.yml
+++ b/spot-instance.yml
@@ -9,8 +9,14 @@ metadata:
 
 nodeGroups:
   - name: ng-1
-    spot: true    
-    instanceType: t3.small
+    minSize: 2
+    maxSize: 5    
+    instancesDistribution:
+        maxPrice: 0.017
+        instanceTypes: ["t3.small", "t3.medium"] # At least one instance type should be specified
+        onDemandBaseCapacity: 0
+        onDemandPercentageAboveBaseCapacity: 50
+        spotInstancePools: 2
     iam:
       withAddonPolicies:
         ebs: true
